<resources>
    <string name="app_name">BTCNGN converter</string>
    <string name="welcome">WELCOME TO KODECAMP BTC/NGN CONVERTER</string>
    <string name="instruction">Enter the amount you would like to change in NGN</string>
    <string name="result">: %s</string>
    <string name="btcval">BITCOIN VALUE</string>
    <string name="roundup">ROUND UP</string>
    <string name="button">BUTTON</string>
</resources>