<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#00f9ff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="699dp"
        android:layout_margin="15dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="258dp"
            android:layout_height="111dp"
            android:layout_marginTop="56dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#ff00d9"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="362dp"
            android:layout_height="27dp"
            android:layout_marginTop="424dp"
            android:gravity="center|start"
            android:text="@string/instruction"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputNGN"
            android:layout_width="269dp"
            android:layout_height="56dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.631"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="73dp"
            android:layout_height="65dp"
            android:layout_marginTop="460dp"
            android:adjustViewBounds="true"
            android:maxWidth="80dp"
            android:maxHeight="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.893"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result"
            android:layout_width="261dp"
            android:layout_height="91dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/result_border"
            android:fontFamily="casual"
            android:text="@string/result"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="60sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btcval"
            android:layout_width="170dp"
            android:layout_height="39dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/btcval"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/roundUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:checked="true"
            android:text="@string/roundup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="349dp"
            android:layout_height="260dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/btcchart" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>